--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -33,7 +33,7 @@
 </div>
 
 <footer>
-    <p>Created with ❤️ by Vinay</p>
+    <p>All Rights Reserved &copy;WinayWeather</p>
 </footer>
 </body>
 </html>
