--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -16,7 +16,7 @@
     <div class="row">
         <div class="col-md-10 col-12 mx-auto">
           <div class="row">
-                 <div class="col-md-6 col-12 main_header_right" >
+                 <div class="col-md-5 col-12 main_header_right" >
                 <!-- <img src="img/wether.gif" class="w-100" alt=""> -->
                 <figure>
                     <img src="img/profile.png" class="img-fluid" alt="">
@@ -24,9 +24,9 @@
               
               </div>
               <!-- left side content -->
-              <div class="col-md-6 col-12 main_header_left" >
+              <div class="col-md-6 col-12 main_header_left cont" >
                <p>I am </p>
-               <h1> <span class="wet">Vinay Kumar Maurya . </span> Web Devloper | Learner</h1>
+               <h1> <span class="wet">Vinay Kumar Maurya . &nbsp;</span> Web Devloper | Learner</h1>
                <a href="https://drive.google.com/file/d/14XDw3GBHSzgqPwLf7IbsIkyLQko2CtRz/view?usp=drivesdk" target="blank"><button>Download CV</button></a>
               </div>
                        <!-- left side content -->
@@ -37,7 +37,7 @@
 </div>
 
 <footer>
-    <p>Created with ❤️ by Vinay</p>
+<p>All Rights Reserved &copy;WinayWeather</p>
 </footer>
 </body>
 </html>
