--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,33 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Merienda:wght@700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap');
 *{
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
-    font-family: 'Merienda', cursive;
     
 }
 :root{
-    --main-bg:rgb(0, 0, 0);
+    --main-bg:rgba(0, 0, 0, 0.712);
     --main-color:#0096e6;
 }
 html{
     font-size: 62.5%;
-
+    
 }
 body{
+    font-family: 'Merienda', cursive;
     height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: rgba(154, 186, 216, 0.518);
+    background: linear-gradient(135deg, #62b8f5, #4475ef);
 }
 .main_menu{
     background-color:var(--main-bg);
 }
 .navbar{
+    font-family: "Poppins", sans-serif;
     color: var(--main-color);
-    background-color:var(--main-bg);
-    padding: 2rem 0;
+    
+    padding: 1rem 0;
  
 }
 .navbar li{
@@ -42,14 +43,20 @@ body{
     text-decoration:overline;
 }
 .navbar-toggler{
-    background-color: rgb(72, 65, 65);
-    color: white;
+    /* background-image: url("../img/sun.png"); */
+    background-color: rgba(96, 101, 75, 0.804);
+    /* color: white; */
+    border: 2px solid  rgb(217, 205, 205);
+    border-radius: 1px;
+}
+
+.navbar-brand{
+  text-shadow: 12px 5px 10px black;
 }
 /* erroe page */
 .errimg{
     margin-top: 160px;
-    /* height:1600px;
-    width: 800px; */
+    
 }
 .w-100{
   
@@ -57,6 +64,7 @@ body{
     height: 500px;
     border-radius: 230px;
     box-shadow: 1px 1px 10px -3px black;
+    opacity: .8;
 }
 .main_header_left{
     height: 40rem;
@@ -67,16 +75,17 @@ body{
 }
 
 .main_header_left p{
-    font-size: 2.6rem;
+    font-size: 3rem;
 }
 
 .main_header_left h1{
-    font-size: 4rem;
+    font-size: 3.4rem;
     text-transform: uppercase;
     margin: 1rem 0 4rem 0 ;
 }
 .main_header_left .wet{
-    color: var(--main-color);
+    color: rgba(121, 206, 240, 0.977);
+    text-shadow: 2px 2px 10px black;
 }
 .main_header_left button{
     padding: .8rem 1rem;
@@ -84,6 +93,9 @@ body{
     border-radius: 2rem;
     font-size: 1.4rem;
     transition: .3s;
+    background-color: rgba(83, 83, 224, 0.404);
+    color: white;
+    text-shadow: 4px 4px 10px black;
     box-shadow: 0px 8px 6px -6px black;
     text-transform: uppercase;
 }
@@ -103,7 +115,7 @@ body{
 /* footer */
 footer{
     width: 100%;
-    background-color: var(--main-bg);
+    background-color: black;
     margin-top: auto;
 }
 footer p{
@@ -123,130 +135,43 @@ footer p{
     padding: 0px 50px;
  }
 
- /* wether style */
- .wet-content{
-     width: 50rem;
-     margin: auto;
-     margin-top: 3rem;
-     margin-bottom: 1rem;
-    height: 10rem;
-     /* background-color: rgb(86, 90, 62); */
-     border-radius: 1rem;
-     padding: 2rem;
-     font-size: 16px;
-     /* display: flex; */
-     /* flex-direction: column; */
- }
- .toplayer{
-     width: 100%;
-     height: 20%;
-     background-color: rgba(42, 34, 34, 0.813);
-     display: flex;
-     justify-content: space-between ;
-     align-items: center;
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
-     font-size: 2rem;
- }
 
- .toplayer p{
-     color: white;
-     padding: 2rem;
 
- }
- .mainlayer{
-     width: 100%;
-     height: 200px;
-     border-bottom-left-radius: 1rem;
-     border-bottom-right-radius: 1rem;
-     background-color:rgb(18, 18, 18);
-     color: white;
-     padding: 2rem;
-     display: flex;
-     flex-direction: column;
- }
- .mainlayer #city{
-     font-weight: 400;
-     font-size: 3rem;
- }
- .mainlayer .middlelayer{
-     display: flex;
-     justify-content: space-between;
-     font-size: 6rem;
- }
 
- .toplayer , .mainlayer{
-     width: 60%;
- }
- sup{
-      font-size: 4rem;
-    
- }
- /* hiding */
- .data_hide{
-     visibility: hidden;
-     transition: all .5s linear;
- }
- .form{
-     width: 100%;
-     /* background-color: rgb(203, 95, 95); */
-     position: relative;
-    margin:1rem auto  ;
-    padding: 0.1rem;
-    border-radius: 2rem;
-  
- }
- #submitbtn{
-     margin: 6px;
-     background-color:rgb(127, 190, 235);
-     padding: 8px;
-     border-radius: 10px;
-     border: none;
-     color: rgb(70, 55, 55);
-     transition: .3s;
-     box-shadow: 0px 1px 10px  black;
- }
- .output{
-     width: 100%;
-     display: flex;
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
- }
- #submitbtn:hover{
-    background-color:rgb(49, 144, 212);
-    color: rgb(255, 255, 255);
-    transform: scale(1.06);
- }
- #cityname{
-     width: 80%;
-     background-color: rgb(0, 0, 0);
-     color: rgb(255, 255, 255);
-     border-radius: 10px;
-     border-style: none;
-     padding: 10px;
- }
- ::placeholder{
-  color: rgb(124, 146, 166);
- }
 
- /* reposnvies */
- @media (max-width:768px){
+
+@media (max-width:490px){
     .main_header_left{
-        height: auto;
-        font-size: 2rem;
-        margin: 1rem 0rem;
+        font-size: 16px;
     }
-    .main_header_right{
-        margin-top: 0px;
-        height: auto;
-        width: auto;
-        margin: 1rem 0rem;
-        font-size: 2rem;
+    .w-100{
+  
+        /* margin-top: 10px; */
+        /* width: 200px; */
+        height: 450px;
+        border-radius: 30px;
+        box-shadow: 1px 1px 10px -3px black;
+        /* opacity: .8; */
     }
-    /* #submitbtn{
-
+    figure img{
+        height: 200px;
+       padding: 0px 10px;
+       border-radius: 20px;
+    }
+    body{
+     
+        height: 130vh;
+    }
+    .cont{
+        position: absolute;
+        top: 330px;
         
-    
-    } */
+    }
+    .cont p{
+        position: absolute;
+        top: 60px;
+    }
+    .cont h1{
+        font-size: 3rem;
+    }
 }
