--- a/templates/partials/nav.hbs
+++ b/templates/partials/nav.hbs
@@ -2,9 +2,9 @@
     <div class="row">
         <div class="col-md-10 col-12 mx-auto">
             <nav class="navbar navbar-expand-lg ">
-                <a class="navbar-brand" href="/Home"></i> VinayWeather</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
+                <a class="navbar-brand" href="/Home"></i> WinayWeather</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" title="Click me" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span><br>
                 </button>
               
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
