--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -19,7 +19,7 @@
                <a href="/wether"><button>Check Now  </button></a>
               </div>
                        <!-- left side content -->
-              <div class="col-md-6 col-12 main_header_right" >
+              <div class="col-md-6 col-12 main_header_right cont" >
                 <img src="img/wether.gif" class="w-100" alt="">
               </div>
           </div>
@@ -28,7 +28,7 @@
 </div>
 
 <footer>
-    <p>Created with ❤️ by Vinay</p>
+    <p>All Rights Reserved &copy;WinayWeather</p>
 </footer>
 </body>
 </html>
