--- a/templates/views/wether.hbs
+++ b/templates/views/wether.hbs
@@ -1,44 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
+
 
 {{>head}}
-
-<body>
- 
 {{>nav}}
 
-<!-- MAin sectuion -->
-<div class="container-fluid main_header">
-    <div class="row">
-        <div class="col-md-10 col-12 mx-auto">
-         
-         <div class="wet-content">
-             <form class="form">
-             <input type="text" placeholder="Enter Your city" id="cityname" autocomplete="off">
-             <input type="submit" value="Search" id="submitbtn">
-             </form>
-         </div>
-         <div class="output">
-             <div class="toplayer">
-                 <p id="day">Tuesday</p>
-                 <p id="date">12133 </p>
-             </div>
-             <div class="mainlayer">
-             <p id="city">Get Output here</p>
-             <div  class="middlelayer data_hide">
-                 <p id="temp"><span>0</span> <sup>o</sup> C </p>
-                 <p id="tempimg">sffsfssf</p>
-             </div>
-             </div>
-         </div>
-        </div>  
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Weather App</title>
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="css/style2.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="shape shape-1"></div>
+      <div class="shape shape-2"></div>
+      <div class="container">
+        <div class="search-container">
+          <input
+            type="text"
+            placeholder="Enter a city name"
+            id="city"
+            value="mumbai"
+          />
+          <button id="search-btn">Search</button>
+        </div>
+        <div id="result"></div>
+      </div>
     </div>
-</div>
-
-<footer>
-    <p>Created with ❤️ by Vinay</p>
+    <footer>
+    <p>All Rights Reserved &copy;WinayWeather</p>
 </footer>
-
-<script src="js/main.js"></script>
-</body>
-</html>
+    
+    <script src="js/main.js"></script>
+  </body>
